Squashed commit of the following:
commit 2a3a6632c530c814cde83f722ffc4c52409712d2
Author: martindaumcz <daum@seznam.cz>
Date:   Wed Nov 26 15:00:59 2025 +0100

    removed creds file

commit 4b8e93cd7882c82bf2cff8415f890408075e098f
Author: martindaumcz <daum@seznam.cz>
Date:   Wed Nov 26 14:53:42 2025 +0100

    kafka stuff added

--- a/techstack/src/main/resources/application.properties
+++ b/techstack/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.application.name=techstack
 org.mdaum.techstack.aws-region=eu-central-1
 org.mdaum.techstack.sqs.queue-name=mdaum-techstack-java-fifo
+org.mdaum.techstack.s3.bucket-name=mdaum-techstack-java
+org.mdaum.techstack.s3.prefix=test-dir/test-subdir
+
 
